<resources>
    <string name="app_name" translatable="false">"Gala"</string>
    <string name="title_item_detail">Launcher for applications with gamepad support</string>
    <string name="menu_editShownGames">Add Game</string>
    <string name="pref_selected_bluetooth_devices_title">Monitored Bluetooth Devices</string>
    <string name="pref_selected_bluetooth_devices_summ">If any bluetooth device is selected then GaLa will be started as soon as this bluetooth device is connected.</string>
    <string name="pref_selected_bluetooth_devices_summ_concrete">If %1$s %2$s connected then GaLa will be started.</string>
    <string name="is_singular_auxiliary_verb">is</string>
    <string name="is_plural_auxiliary_verb">are</string>
    <string name="or">or</string>
    <string name="pref_bluetooth_detection_summ">Starts GaLa when an selected bluetooth device is connected.</string>
    <string name="pref_bluetooth_detection_title">Bluetooth Device Detection</string>
    <string name="pref_key_bluetooth_detection_service" translatable="false">pref_key_bluetooth_detection_service</string>
    <string name="pref_key_selected_bluetooth_devices" translatable="false">pref_key_selected_bluetooth_devices</string>
    <string name="error">Error</string>
    <string name="bluetooth_not_supported">Bluetooth NOT support!</string>
    <string name="bluetooth_enable_error">Bluetooth could NOT be enabled!</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="toolbar_title_manage_apps">Manage apps</string>
    <string name="settings">Settings</string>
    <string name="scrapepage" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_default_description">Not found in Google Play Store!</string>
    <string name="autodiscover_dialog_title">Searching games on device</string>
    <string name="autodiscover_dialog_message">Retrieving all installed applications</string>
    <string name="autodiscover_dialog_message_checking">Checking</string>
    <string name="first_run_question">Do you want to let Gala search for games on the device now?\nYou can manually add games later.</string>
    <string name="menu_auto_discover_games">Search games</string>
    <string name="discover_games_question">Do you want to let Gala search for games on the device and add them to your current games list?</string>
    <string name="user_interface_settings_category">User interface</string>
    <string name="pref_key_user_interface_num_columns" translatable="false">pref_key_user_interface_num_columns</string>
    <string name="pref_user_interface_num_columns_sum">Game items are listed in %1$s columns.</string>
    <string name="pref_user_interface_num_columns_title">Number of columns</string>
    <string name="pref_key_user_interface_spacing" translatable="false">pref_key_user_interface_spacing</string>
    <string name="pref_user_interface_spacing_sum">The spacing between the game items is %1$s.</string>
    <string name="pref_user_interface_spacing_title">Spacing between games</string>
    <string name="pref_key_user_interface_shadow" translatable="false">pref_key_user_interface_shadow</string>
    <string name="pref_user_interface_shadow_sum_false">Game items have no shadow.</string>
    <string name="pref_user_interface_shadow_sum_true">Game items have a shadow.</string>
    <string name="pref_user_interface_shadow_title">Show shadow</string>
    <string name="pref_key_user_interface_height" translatable="false">pref_key_user_interface_height</string>
    <string name="pref_user_interface_height_sum">For the game items a %1$s is used.</string>
    <string name="pref_user_interface_height_title">Height of game items</string>
    <string name="pref_cat_bluetooth" translatable="false">pref_cat_bluetooth</string>
    <string name="pref_key_user_interface_show_downloaded_images" translatable="false">pref_key_user_interface_show_downloaded_images</string>
    <string name="pref_user_interface_show_downloaded_images_sum_false">For the game items the app icons are shown.</string>
    <string name="pref_user_interface_show_downloaded_images_sum_true">For the game items the downloaded images are shown (if available).</string>
    <string name="pref_user_interface_show_downloaded_images_title">Show downloaded images</string>
    <string name="pref_key_user_interface_orientation" translatable="false">pref_key_user_interface_orientation</string>
    <string name="pref_user_interface_orientation_sum">The screen is in %1$s orientation.</string>
    <string name="pref_user_interface_orientation_title">Screen orientation</string>
    <string name="pref_key_current_version" translatable="false">pref_key_current_version</string>
    <string name="alert_clear_data_title">Reset of application data required</string>pref_key_user_interface_height
    <string name="alert_clear_data_message">The latest update fixes major problems with the game list items. Unfortunately, the application data have to be cleared. The application then closes automatically and can be reopened afterwards.</string>
    <string name="general_settings_category">General</string>
    <string name="pref_key_general_start_immediately" translatable="false">pref_key_general_start_immediately</string>
    <string name="pref_key_general_start_immediately_sum_false">Clicking a game entry opens a details view.</string>
    <string name="pref_key_general_start_immediately_sum_true">Clicking a game entry directly starts the game.</string>
    <string name="pref_key_general_start_immediately_title">Click Behaviour</string>
</resources>
