<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/auto_discover_games"
        android:title="@string/menu_auto_discover_games"
        android:icon="@drawable/ic_binoculars_white_24dp"
        app:showAsAction="ifRoom"
        android:onClick="discoverGames"/>
    <item
        android:id="@+id/editShownGames"
        android:title="@string/menu_editShownGames"
        android:icon="@drawable/ic_pencil_white_24dp"
        app:showAsAction="ifRoom"
        android:onClick="editGames"/>
    <item
        android:id="@+id/showPreferences"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom"
        android:onClick="showPreferences"/>
</menu>